# usermanagement/src/main/java/cz/uhk/fim/controller/LocalStudentController.java
@@ -1,10 +1,13 @@
 package cz.uhk.fim.controller;
 
 import cz.uhk.fim.service.LocalStudentService;
+import cz.uhk.fim.service.StudentService;
 import cz.uhk.fim.usermanagement.api.LocalStudentApi;
 import cz.uhk.fim.usermanagement.model.AssignInternationalStudentToLocalStudent200Response;
 import cz.uhk.fim.usermanagement.model.GetAssignedInternationalStudentsForLocalStudent200Response;
+import cz.uhk.fim.usermanagement.model.LocalStudentProfile;
 import cz.uhk.fim.usermanagement.model.LocalStudentProfileDetailsResponse;
+import cz.uhk.fim.usermanagement.model.LocalStudentProfileEditRequest;
 import cz.uhk.fim.usermanagement.model.RegisterLocalStudentRequest;
 import cz.uhk.fim.usermanagement.model.RegisterLocalStudentResponse;
 import cz.uhk.fim.utils.JwtUtils;
@@ -26,6 +29,7 @@ import java.util.UUID;
 public class LocalStudentController implements LocalStudentApi {
 
     private final LocalStudentService localStudentService;
+    private final StudentService studentService;
 
     @Override
     public ResponseEntity<RegisterLocalStudentResponse> registerLocalStudent(RegisterLocalStudentRequest registerLocalStudentRequest) {
@@ -49,5 +53,26 @@ public class LocalStudentController implements LocalStudentApi {
     public ResponseEntity<GetAssignedInternationalStudentsForLocalStudent200Response> getAssignedInternationalStudentsForLocalStudent() {
         return ResponseEntity.ok(new GetAssignedInternationalStudentsForLocalStudent200Response()
                 .students(localStudentService.getAssignedInternationalStudentsForLocalStudent(JwtUtils.getIdFromSecurityContext(SecurityContextHolder.getContext()))));
+    }
+
+    @Override
+    public ResponseEntity<LocalStudentProfile> getLocalStudentById(UUID localStudentId) {
+        var loggedUserKeycloakId = JwtUtils.getIdFromSecurityContext(SecurityContextHolder.getContext());
+        var loggedInUserId = studentService.getStudentIdByKeycloakId(loggedUserKeycloakId);
+        if (loggedInUserId.equals(localStudentId) || localStudentService.isLocalStudentBuddyOfInternationalStudent(localStudentId, loggedInUserId)) {
+            return ResponseEntity.ok(localStudentService.getLocalStudentProfile(localStudentId));
+        }
+        return ResponseEntity.status(403).build();
+    }
+
+    @Override
+    public ResponseEntity<LocalStudentProfile> updateLocalStudentById(UUID localStudentId, LocalStudentProfileEditRequest localStudentProfileEditRequest) {
+        var loggedUserKeycloakId = JwtUtils.getIdFromSecurityContext(SecurityContextHolder.getContext());
+        var loggedInUserId = studentService.getStudentIdByKeycloakId(loggedUserKeycloakId);
+        //There could be added validation if logged user is admin then can also update another user's profile
+        if (loggedInUserId.equals(localStudentId)) {
+            return ResponseEntity.ok(localStudentService.updateLocalStudentById(localStudentId, localStudentProfileEditRequest));
+        }
+        return ResponseEntity.status(403).build();
     }
 }
